--- a/Project/src/main/resources/admin_main_menu_main.fxml
+++ b/Project/src/main/resources/admin_main_menu_main.fxml
@@ -28,7 +28,7 @@
                           <menus>
                             <Menu mnemonicParsing="false" text="Back">
                               <items>
-                                <MenuItem mnemonicParsing="false" text="Go back to previouse page" />
+                                <MenuItem fx:id="backMenuItem" mnemonicParsing="false" onAction="#setBackMenuItem" text="Go back to previouse page" />
                               </items>
                             </Menu>
                           </menus>
@@ -40,12 +40,12 @@
                         <Font name="System Bold" size="25.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton buttonType="RAISED" layoutX="251.0" layoutY="412.0" maxHeight="40.0" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Service Request" textFill="WHITE">
+                  <JFXButton fx:id="serviceRequestButton" buttonType="RAISED" layoutX="251.0" layoutY="412.0" maxHeight="40.0" onAction="#setServiceRequestButton" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Service Request" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton buttonType="RAISED" layoutX="251.0" layoutY="246.0" maxHeight="40.0" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Reserve a Room" textFill="WHITE">
+                  <JFXButton fx:id="reservationsButton" buttonType="RAISED" layoutX="251.0" layoutY="246.0" maxHeight="40.0" onAction="#setReservationsButton" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Reserve a Room" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
@@ -55,12 +55,12 @@
                         <Font name="System Bold" size="40.0" />
                      </font>
                   </Text>
-                  <JFXButton buttonType="RAISED" layoutX="250.0" layoutY="497.0" maxHeight="40.0" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Administrator Tools" textFill="WHITE">
+                  <JFXButton fx:id="adminToolsButton" buttonType="RAISED" layoutX="250.0" layoutY="497.0" maxHeight="40.0" onAction="#setAdminToolsButton" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Administrator Tools" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton buttonType="RAISED" layoutX="250.0" layoutY="163.0" maxHeight="40.0" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Find Your Path" textFill="WHITE">
+                  <JFXButton fx:id="pathfindingButton" buttonType="RAISED" layoutX="250.0" layoutY="163.0" maxHeight="40.0" onAction="#setPathfindingButton" prefHeight="40.0" prefWidth="400.0" style="-fx-background-color: #ebaecd;" text="Find Your Path" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="25.0" />
                      </font>
