--- a/Project/src/main/resources/admin_tools_main.fxml
+++ b/Project/src/main/resources/admin_tools_main.fxml
@@ -29,7 +29,7 @@
                     <menus>
                       <Menu mnemonicParsing="false" text="Back">
                         <items>
-                          <MenuItem mnemonicParsing="false" text="Go back to previouse page" />
+                          <MenuItem fx:id="backMenuItem" mnemonicParsing="false" onAction="#setBackMenuItem" text="Go back to previouse page" />
                         </items>
                       </Menu>
                       <Menu fx:id="homeButton" mnemonicParsing="false" text="Home" />
