--- a/Project/src/main/resources/background.css
+++ b/Project/src/main/resources/background.css
@@ -1,47 +1,56 @@
 
- .body-background {
-    //  -fx-background-image: linear-gradient(56deg, #1200c3, #8441b5, #bc77a5, #eaae90)
+.body-background {
+/ / -fx-background-image: linear-gradient(56 deg, #1200c3, #8441b5, #bc77a5, #eaae90)
 }
-
 
 /*Raised button example */
 .jfx-button {
     -jfx-button-type: RAISED;
-    -fx-background-color:#ebaecd;
+    -fx-background-color: #ebaecd;
     -fx-font-weight: bold;
     -fx-text-fill: white;
 }
- .jfx-button2 {
-     -jfx-button-type: RAISED;
-     -fx-background-color:#ebaecd;
-     -fx-font-size: 20;
-     -fx-font-weight: bold italic;
-     -fx-text-fill: white;
- }
-/* Tab pane styling*/
-.tab-pane{
-    -fx-background-color: #bc77a5;
-    -fx-pref-width: 600;
-    -webkit-fx-pref-height:50;
+
+.jfx-button2 {
+    -jfx-button-type: RAISED;
+    -fx-background-color: #ebaecd;
+    -fx-font-size: 20;
+    -fx-font-weight: bold italic;
+    -fx-text-fill: white;
 }
 
- .tab-header-background{
-     -fx-background-color: #bc77a5;
- }
+/* Tab pane styling*/
+.tab-pane {
+    -fx-background-color: #bc77a5;
+    -fx-pref-width: 600;
+    -webkit-fx-pref-height: 50;
+}
+
+.tab-header-background {
+    -fx-background-color: #bc77a5;
+}
+
 /* Menu bar*/
 
- .menu-bar{
-     -fx-pref-width: 600;
-     -webkit-fx-pref-height:30;
-     -fx-font-size: 12;
-     -fx-font-weight: bold;
-     -fx-text-fill: white;
+.menu-bar {
+    -fx-pref-width: 600;
+    -webkit-fx-pref-height: 30;
+    -fx-font-size: 12;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
 
     /* -fx-background-image: url("\purple-orange-gradient.jpg");*/
- }
- .menu{
-     -fx-text-fill: white;
- }
+}
+
+.menu {
+    -fx-text-fill: white;
+}
+
+.all-text {
+    -fx-font-size: 16;
+    -fx-font-weight: bold italic;
+    -fx-text-fill: white;
+}
 
 
 
