--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Path?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -80,11 +81,16 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="575.0" prefWidth="700.0">
                <children>
-                  <ImageView fitHeight="575.0" fitWidth="690.0" preserveRatio="true">
-                     <image>
-                        <Image url="@02_thesecondfloor.png" />
-                     </image>
-                  </ImageView>
+                  <StackPane prefHeight="150.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fitHeight="575.0" fitWidth="690.0" preserveRatio="true">
+                           <image>
+                              <Image url="@02_thesecondfloor.png" />
+                           </image>
+                        </ImageView>
+                        <Path fx:id="path" fill="DODGERBLUE" stroke="BLACK" strokeType="INSIDE" />
+                     </children>
+                  </StackPane>
                </children>
             </AnchorPane>
         </content>
