--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -71,7 +71,7 @@
                                     <Insets left="25.0" />
                                  </VBox.margin>
                               </ChoiceBox>
-                              <JFXButton fx:id="cancel_button" prefWidth="100.0" text="Cancel">
+                              <JFXButton fx:id="cancel_button" onAction="#clearPath" prefWidth="100.0" text="Cancel">
                                  <VBox.margin>
                                     <Insets left="50.0" top="25.0" />
                                  </VBox.margin></JFXButton>
