--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -25,10 +25,9 @@
     </ImageView>
     <VBox prefHeight="600.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <MenuBar blendMode="ADD" opacity="0.9" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@background.css">
-            <Menu mnemonicParsing="false" text="Back">
+            <Menu mnemonicParsing="false" text="Home">
                 <MenuItem mnemonicParsing="false" text="Go back to previouse page" />
             </Menu>
-            <Menu mnemonicParsing="false" text="Home" />
         </MenuBar>
         <HBox prefHeight="575.0" prefWidth="900.0">
             <StackPane prefHeight="150.0" prefWidth="200.0">
