--- a/Project/src/main/resources/admin_tools_view_edges.fxml
+++ b/Project/src/main/resources/admin_tools_view_edges.fxml
@@ -60,7 +60,7 @@
                   </TableView>
                </center>
             </BorderPane>
-            <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="774.0" layoutY="535.0" onAction="#setAddButton" style="-fx-background-color: #ebaecd;" stylesheets="@backgroud.css" text="Add Node" textFill="WHITE">
+            <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="774.0" layoutY="535.0" onAction="#setAddButton" style="-fx-background-color: #ebaecd;" stylesheets="@backgroud.css" text="Add Edge" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
