--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -66,14 +67,16 @@
                     </JFXButton>
                     <AnchorPane prefHeight="382.0" prefWidth="200.0">
                         <JFXToggleButton prefHeight="58.0" prefWidth="200.0" styleClass="all-text" stylesheets="@background.css" text="NO STAIRS" textAlignment="CENTER" wrapText="true" AnchorPane.bottomAnchor="0.0" />
+                  <Button fx:id="zoom_button" layoutX="74.0" layoutY="70.0" mnemonicParsing="false" onAction="#zoom" text="Zoom" />
+                  <Button fx:id="unzoom_button" layoutX="69.0" layoutY="103.0" mnemonicParsing="false" onAction="#unZoom" text="UnZoom" />
                     </AnchorPane>
                 </VBox>
             </StackPane>
         </HBox>
     </VBox>
-    <ScrollPane prefHeight="575.0" prefWidth="700.0" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="25.0">
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="575.0" prefWidth="700.0">
-             <ImageView fitHeight="575.0" fitWidth="690.0" preserveRatio="true">
+    <ScrollPane fx:id="scrollPane_pathfind" prefHeight="465.0" prefWidth="700.0" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="25.0">
+        <AnchorPane fx:id="scroll_AnchorPane" maxWidth="1000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+             <ImageView fx:id="map_imageView" fitHeight="465.0" fitWidth="684.0" preserveRatio="true">
                  <Image url="@02_thesecondfloor.png" />
              </ImageView>
              <Path fx:id="path" fill="#1f93ff00" layoutX="346.0" layoutY="236.0" stroke="BLACK" strokeType="INSIDE" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
