path drawing works

--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -75,11 +75,11 @@
         </HBox>
     </VBox>
     <ScrollPane fx:id="scrollPane_pathfind" prefHeight="465.0" prefWidth="700.0" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="25.0">
-        <AnchorPane fx:id="scroll_AnchorPane" maxWidth="1000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
+        <AnchorPane fx:id="scroll_AnchorPane" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
              <ImageView fx:id="map_imageView" fitHeight="465.0" fitWidth="684.0" preserveRatio="true">
                  <Image url="@02_thesecondfloor.png" />
              </ImageView>
-             <Path fx:id="path" fill="#1f93ff00" layoutX="346.0" layoutY="236.0" stroke="BLACK" strokeType="INSIDE" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+             <Path fx:id="path" />
         </AnchorPane>
     </ScrollPane>
 </AnchorPane>
