Fixed UI Changes/Updates

--- a/Project/src/main/resources/background.css
+++ b/Project/src/main/resources/background.css
@@ -4,6 +4,7 @@
 }
 
 /*Raised button example */
+/*
 .jfx-button {
     -jfx-button-type: RAISED;
     -fx-background-color: #ebaecd;
@@ -18,7 +19,7 @@
     -fx-font-weight: bold italic;
     -fx-text-fill: white;
 }
-
+*/
 /* Tab pane styling*/
 .tab-pane {
     -fx-background-color: #bc77a5;
