--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -3,7 +3,6 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -60,15 +59,24 @@
                             <Insets left="25.0" />
                         </VBox.margin>
                     </ChoiceBox>
-                    <JFXButton onAction="#clearSelection" prefWidth="100.0" text="Cancel">
+                    <JFXButton onAction="#clearSelection" prefWidth="100.0" style="-fx-background-color: #ebaecd;" text="Cancel" textFill="WHITE">
                         <VBox.margin>
                             <Insets left="50.0" top="25.0" />
                         </VBox.margin>
+                  <font>
+                     <Font name="System Bold" size="14.0" />
+                  </font>
                     </JFXButton>
                     <AnchorPane prefHeight="382.0" prefWidth="200.0">
                         <JFXToggleButton prefHeight="58.0" prefWidth="200.0" styleClass="all-text" stylesheets="@background.css" text="NO STAIRS" textAlignment="CENTER" wrapText="true" AnchorPane.bottomAnchor="0.0" />
-                  <Button fx:id="zoom_button" layoutX="74.0" layoutY="70.0" mnemonicParsing="false" onAction="#zoom" text="Zoom" />
-                  <Button fx:id="unzoom_button" layoutX="69.0" layoutY="103.0" mnemonicParsing="false" onAction="#unZoom" text="UnZoom" />
+                  <JFXButton fx:id="zoom_button" layoutX="71.0" layoutY="61.0" mnemonicParsing="false" onAction="#zoom" style="-fx-background-color: #ebaecd;" text="Zoom" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font></JFXButton>
+                  <JFXButton fx:id="unzoom_button" layoutX="60.0" layoutY="103.0" mnemonicParsing="false" onAction="#unZoom" style="-fx-background-color: #ebaecd;" text="UnZoom" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font></JFXButton>
                     </AnchorPane>
                 </VBox>
             </StackPane>
