--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="parentAnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" scaleShape="false" styleClass="body-background" stylesheets="/background.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerPFM">
-    <ImageView fx:id="leftImage" fitHeight="600.0" fitWidth="900.0" pickOnBounds="true">
+    <ImageView fx:id="backgroundImage" fitHeight="600.0" fitWidth="900.0" pickOnBounds="true">
         <Image url="@purple-orange-gradient.jpg" />
     </ImageView>
     <VBox prefHeight="600.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
