--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -69,11 +69,11 @@
                     </JFXButton>
                     <AnchorPane prefHeight="382.0" prefWidth="200.0">
                         <JFXToggleButton prefHeight="58.0" prefWidth="200.0" styleClass="all-text" stylesheets="@background.css" text="NO STAIRS" textAlignment="CENTER" wrapText="true" AnchorPane.bottomAnchor="0.0" />
-                  <JFXButton fx:id="zoom_button" layoutX="71.0" layoutY="61.0" mnemonicParsing="false" onAction="#zoom" style="-fx-background-color: #ebaecd;" text="Zoom" textFill="WHITE">
+                  <JFXButton fx:id="zoom_button" layoutX="51.0" layoutY="61.0" mnemonicParsing="false" onAction="#zoom" prefWidth="100.0" style="-fx-background-color: #e56773;" text="Zoom In" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font></JFXButton>
-                  <JFXButton fx:id="unzoom_button" layoutX="60.0" layoutY="103.0" mnemonicParsing="false" onAction="#unZoom" style="-fx-background-color: #ebaecd;" text="UnZoom" textFill="WHITE">
+                  <JFXButton fx:id="unzoom_button" layoutX="50.0" layoutY="103.0" mnemonicParsing="false" onAction="#unZoom" prefWidth="100.0" style="-fx-background-color: #e56773;" text="Zoom Out" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font></JFXButton>
