--- a/Project/src/main/resources/service_request_main.fxml
+++ b/Project/src/main/resources/service_request_main.fxml
@@ -52,11 +52,7 @@
             </ImageView>
             <ChoiceBox fx:id="roomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="100.0">
                <effect>
-                  <Blend mode="MULTIPLY" opacity="0.34">
-                     <topInput>
-                        <DropShadow />
-                     </topInput>
-                  </Blend>
+                  <Blend mode="MULTIPLY" opacity="0.34" />
                </effect>
             </ChoiceBox>
             <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Your Room" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="65.0">
@@ -71,11 +67,7 @@
             </Text>
             <ChoiceBox fx:id="serviceSelect" prefHeight="0.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="175.0">
                <effect>
-                  <Blend mode="MULTIPLY" opacity="0.34">
-                     <topInput>
-                        <DropShadow />
-                     </topInput>
-                  </Blend>
+                  <Blend mode="MULTIPLY" opacity="0.34" />
                </effect>
             </ChoiceBox>
             <JFXTextArea fx:id="serviceMessage" layoutY="278.0" maxHeight="267.0" maxWidth="160.0" prefHeight="267.0" prefWidth="160.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="270.0" />
