--- a/Project/src/main/resources/admin_main_menu_main.fxml
+++ b/Project/src/main/resources/admin_main_menu_main.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerMMM">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerMMM">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -19,12 +19,12 @@
                <children>
                   <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@purple-orange-gradient.jpg" />
+                        <Image url="/purple-orange-gradient.jpg" />
                      </image>
                   </ImageView>
                   <BorderPane>
                      <top>
-                        <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
+                        <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="/background.css" BorderPane.alignment="CENTER">
                           <menus>
                             <Menu mnemonicParsing="false" text="Back">
                               <items>
