--- a/Project/src/main/resources/path_find_main.fxml
+++ b/Project/src/main/resources/path_find_main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXSlider?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -22,7 +23,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <StackPane fx:id="parentPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFM">
      <children>
          <ImageView fx:id="backgroundImage" pickOnBounds="true">
@@ -40,10 +40,10 @@
              <HBox fx:id="hboxForMap" fillHeight="true" VBox.vgrow="ALWAYS">
             <GridPane fx:id="interfaceGrid" minWidth="200.0" prefWidth="200.0" HBox.hgrow="NEVER">
                <columnConstraints>
-                  <ColumnConstraints hgrow="ALWAYS" fillWidth="true" minWidth="200.0" />
+                  <ColumnConstraints fillWidth="true" hgrow="ALWAYS" minWidth="200.0" />
                </columnConstraints>
                <rowConstraints>
-                  <RowConstraints percentHeight="5.0" vgrow="ALWAYS"  />
+                  <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
                   <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
                   <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
                   <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
@@ -82,13 +82,37 @@
                <children>
                        <ScrollPane fx:id="scrollPane_pathfind">
                            <AnchorPane fx:id="scroll_AnchorPane" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
-                               <ImageView fx:id="map_imageView" preserveRatio="true">
-                                   <Image url="@02_thesecondfloor.png" />
-                               </ImageView>
-                               <Path fx:id="path" />
+                               <StackPane alignment="TOP_LEFT">
+                                   <children>
+                                       <ImageView fx:id="map_002" opacity="0.0" preserveRatio="true">
+                                           <Image url="@maps/00_thelowerlevel2.png" />
+                                       </ImageView>
+                                       <Path fx:id="p_002" />
+                                       <ImageView fx:id="map_001" opacity="0.0" preserveRatio="true">
+                                           <Image url="@maps/00_thelowerlevel2.png" />
+                                       </ImageView>
+                                       <Path fx:id="p_001" />
+                                       <ImageView fx:id="map_00" opacity="0.0" preserveRatio="true">
+                                           <Image url="@maps/00_thegroundfloor.png" />
+                                       </ImageView>
+                                       <Path fx:id="p_00" />
+                                       <ImageView fx:id="map_01" opacity="0.0" preserveRatio="true">
+                                           <Image url="@maps/01_thefirstfloor.png" />
+                                       </ImageView>
+                                       <Path fx:id="p_01" />
+                                       <ImageView fx:id="map_02" opacity="0.0" preserveRatio="true">
+                                           <Image url="@maps/02_thesecondfloor.png" />
+                                       </ImageView>
+                                       <Path fx:id="p_02" />
+                                       <ImageView fx:id="map_03" opacity="0.0" preserveRatio="true">
+                                           <Image url="@maps/03_thethirdfloor.png" />
+                                       </ImageView>
+                                       <Path fx:id="p_03" />
+                                   </children>
+                               </StackPane>
                            </AnchorPane>
                        </ScrollPane>
-                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="140.0" prefWidth="75.0" StackPane.alignment="TOP_LEFT">
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="75.0" StackPane.alignment="TOP_LEFT">
                      <children>
                         <JFXButton fx:id="zoom_button" contentDisplay="CENTER" layoutX="4.0" layoutY="14.0" mnemonicParsing="false" onAction="#zoom" prefWidth="100.0" styleClass="jfx-button-zoom" stylesheets="@background.css" text=" " textFill="WHITE">
                            <font>
@@ -97,7 +121,7 @@
                            <graphic>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/zoom-in%20(1).png" />
+                                    <Image url="@icon/zoom-in (1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -109,11 +133,12 @@
                            <graphic>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/zoom-out%20(1).png" />
+                                    <Image url="@icon/zoom-out (1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXSlider fx:id="floorSlider" layoutX="20.0" layoutY="150.0" onDragDetected="#chageFloor" orientation="VERTICAL" prefHeight="150.0" prefWidth="0.0" AnchorPane.leftAnchor="15.0" />
                      </children>
                      <StackPane.margin>
                         <Insets left="10.0" />
